# drf-pydantic

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml  lint.yml  publish.yml  test.yml
src/drf_pydantic/: __init__.py  base_model.py  base_serializer.py  config.py  converter.py  errors.py  fields.py  parse.py  test_utils.py  utils.py
tests/: conftest.py  test_fields.py  test_models.py  test_true.py  test_utils.py  test_validation.py
